--- a/index.html
+++ b/index.html
@@ -35,35 +35,15 @@
         <form>
           <div class="mb-3 mt-3">
             <label for="name" class="form-label"> First and Last Name:</label> <!--name-->
-            <input 
-              type="text" 
-              class="form-control" 
-              id="name" 
-              name="name" 
-              placeholder="John Smith"
-              required
-            />
+            <input type="text" class="form-control" id="name" name="name" placeholder="John Smith" required/>
           </div> 
           <div class="mb-3 mt-3">
             <label for="email" class="form-label">Email:</label>
-            <input 
-              type="email" 
-              class="form-control" 
-              id="email" 
-              name="email" 
-              placeholder="email@gmail.com"
-              required
-            />
+            <input type="email" class="form-control" id="email" name="email" placeholder="email@gmail.com" required/>
           </div>
           <div>
             <label for="phone">Phone Number</label> <!--phone number-->
-            <input 
-              type="text" 
-              class="form-control" 
-              id="phone" 
-              placeholder="123-456-7890"
-              required
-            >
+            <input type="text" class="form-control" id="phone" placeholder="123-456-7890" required/>
           </div>
           <div>
             <label for="date">Date available:</label> <!--date-->
@@ -88,7 +68,10 @@
           </select>
           <br>
           <label for="explain">Why should you get to adopt Leo for the Day?</label> <!--text-->
-          <textarea class="form-conhttps://github.com/nicolereilly/india-labalue="Submit"><input type="reset" value="Reset"></p>
+          <textarea class="form-control" id="explain" rows="3"></textarea>
+
+          Check if you are ready for the best day of your LIFE: <input type="checkbox" id="myCheck">
+          <p><input type="submit" value="Submit"><input type="reset" value="Reset"></p>
         </form>
       </div>
     </div>
